--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/multer": "^1.4.11",
     "aws-sdk": "^2.1509.0",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "jose": "^5.1.0",
     "moment": "^2.29.4",
     "openai": "^4.17.3",
